<resources>
    <string name="app_name" translatable="false">Time Counter</string>
    <string name="loading">Loading</string>
    <string name="dormitory">Show events for dormitory</string>
    <string name="ring">Ring</string>
    <string name="title_activity_settings">Settings</string>
    <string name="font">Font</string>
    <string name="select_class">Select class</string>
    <string name="no_further_events">No events</string>
    <string name="epilepticBG">Epileptic background</string>
    <string name="epilepticBG_summary">May drain battery, restart needed</string>
    <string name="settings_dialog_message">Choose a value</string>
    <string name="settings_title">Amount of upcoming events</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Tretyakov Andriy</string>
    <string name="release_name">Release name</string>
    <string name="about">About</string>
    <string name="enable_notification">Enable notifications</string>
    <string name="internet_needed">Connect to internet\nIf you are connected, restart the app</string>
    <string name="hours_for_notifying">Notify within only X mins</string>
    <string name="version_of_file">Version of class schedule</string>
    <string name="show_breaks">Show breaks</string>
    <string name="ring_duration">Ring duration</string>
    <string name="evenWeek">Even week</string>
    <string name="ring_summary">Requires to show a notification</string>
    <string name="font_size">Font size</string>
    <string name="online_lectures">Start of lectures at 15:30</string>
</resources>
